# inf8601_Labs

./: .gitignore  CMakeLists.txt  README.html
Lab01/: CMakeLists.txt  README-specs.asc
Lab01/data/: del.sh
Lab01/include/: filter.h  image.h  log.h  matchers.hpp  pipeline.h  queue.h
Lab01/source/: filter.c  image.c  main.c  pipeline-pthread.c  pipeline-serial.c  pipeline-tbb.cpp  queue.c
Lab02/: .gitignore  CMakeLists.txt  README-specs.asc  README.asc  README.html
Lab02/include/: color.h  headless.h  image.h  log.h  opencl.h  pixel.h  sinoscope.h  viewer.h
Lab02/source/: color.c  headless.c  image.c  main.c  opencl.c  sinoscope-opencl.c  sinoscope-openmp.c  sinoscope-serial.c  sinoscope.c  viewer.c
Lab02/source/kernel/: helpers.cl  sinoscope.cl
Lab02/source/matcher/: file_search.cpp  file_search.hpp  main.cpp  matchers.cpp  matchers.hpp
Lab03/: CMakeLists.txt  README-specs.asc  README.asc  README.html
Lab03/images/: check1.checksum  check10.checksum  check16.checksum  check32.checksum
Lab03/include/: cart.h  color.h  grid.h  heatsim.h  image.h  log.h  pixel.h
Lab03/scripts/: heatsim-01.sh  heatsim-02.sh  heatsim-04.sh  heatsim-08.sh  heatsim-12-cart.sh  heatsim-12.sh  heatsim-launch.sh  queue-all.sh  run-check
Lab03/source/: cart.c  color.c  grid.c  heatsim-mpi.c  heatsim.c  image.c  main.c
Lab03/source/matcher/: file_search.cpp  file_search.hpp  main.cpp  variants.hpp
Lab03/tests/: CMakeLists.txt  cart.c  grid.c
data/: check.sh
